--- a/contact-4.html
+++ b/contact-4.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css">
-
     <title>Contact us</title>
     <link rel="stylesheet" href="contact.css">
 </head>
@@ -55,18 +54,26 @@
 
 
    <section class="contact">
-        <div class="container">
-                <div class="branding">
+        <div class="containerr">
+                <!-- <div class="branding"> -->
                     <h3> Contact Us</h3>
-                    <p> Address: 123 Main Street, Lagos State CA 12345</p>
+                     <p> Address: 123 Main Street, Lagos State CA 12345</p>
                     <p> Phone: 08038844121</p>
                     <p> www.info@fintechmicrofinancebank.com</p>
-                    <p>Email:femitimthy123@gmil.com</p>
+                    <p>Email:femitimthy123@gmil.com</p> 
 
-                    <img src="building.jpg" alt="Fintech building">
-                </div>
+                    
+                <!-- </div> -->
         </div>
     
+   </section>
+
+
+
+   <section class="image">
+    <div class="containerr">
+             <img src="building.jpg" alt="Fintech building"> 
+    </div>
    </section>
 
 
@@ -74,7 +81,7 @@
 
 <footer>
     <p> &copy; 2024 fintech Microfinance Bank</p>
-   </footer>
+ </footer>
 
 
 
