--- a/about-2.html
+++ b/about-2.html
@@ -58,10 +58,10 @@
    <!--about us-->
 
    <section class="about-us">
-        <div class="container">
+        <div class="containerr">
             <div class="branding">
                 <h3>About us</h3>
-                <p>We are a team of experience professionals. <br> We are comitted to building strong relationships with our customers and helping them achieve their financial goals.</P>
+                <p>We are a team of experience professionals and we comitted to building strong relationships with our customers and helping them achieve their financial goals.</P>
             </div>
 
                 <img src="loan3.jpg" alt="">
@@ -71,7 +71,7 @@
 
    
    <section class="contact">
-    <div class="container">
+    <div class="containerr">
             <div class="branding">
                 <h3> Contact Us</h3>
                 <p> Address: 123 Main Street, Lagos State CA 12345</p>
